Fixed css overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -1839,7 +1839,7 @@ INTROS AND HEROS
   margin-bottom: 2rem;
 }
 .pricing-tier .list-unstyled {
-  height: 360px;
+  height: 400px;
 }
 .pricing-tier .plan-title {
   font-size: 2rem;
